added index and sales HTML/CSS

--- a/sales.html
+++ b/sales.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sales.HTML</title>
+    <title>Sales Simulation</title>
+    <link href="salesStyle.css" rel="stylesheet">
   </head>
   <body>
-    <ul id = 'firstAndPikeUL'></ul>
-    <ul id = 'seatacAirportUL'></ul>
-    <ul id = 'seattleCenterUL'></ul>
-    <ul id = 'capitolHillUL'></ul>
-    <ul id = 'alkiUL'></ul>
+    <header>
+      <h1>Sales Simulation</h1>
+      <nav>
+        <li><a href="index.html">Return Home</a></li>
+      </nav>
+    </header>
+    <p>
+      Below is a simulation of cookie sales per hour in each of our Salmon Cookie locations!
+    </p>
+    <div>
+      <ul id = 'firstAndPikeUL'></ul>
+      <ul id = 'seatacAirportUL'></ul>
+      <ul id = 'seattleCenterUL'></ul>
+      <ul id = 'capitolHillUL'></ul>
+      <ul id = 'alkiUL'></ul>
+    </div>
 
     <script src="app.js"></script>
   </body>
