--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <body>
     <header>
       <img id ='logoLeft' src = img/salmon.png />
-      <h1>Welcome to Salmon Cookies!</h1>
-      <nav>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="">Menu</a></li>
-        <li><a href="">Locations</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="sales.html">Sales Simulation</a></li>
-      </nav>
+      <div id="heading">
+        <h1>Welcome to Salmon Cookies!</h1>
+        <nav>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="">Menu</a></li>
+          <li><a href="">Locations</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="sales.html">Sales Simulation</a></li>
+        </nav>
+      <div>
       <img id ='logoRight' src = img/salmon.png />
     </header>
 
