--- a/sales.html
+++ b/sales.html
@@ -15,11 +15,11 @@
       Below is a simulation of cookie sales per hour in each of our Salmon Cookie locations!
     </p>
     <div>
-      <ul id = 'firstAndPikeUL'></ul>
-      <ul id = 'seatacAirportUL'></ul>
-      <ul id = 'seattleCenterUL'></ul>
-      <ul id = 'capitolHillUL'></ul>
-      <ul id = 'alkiUL'></ul>
+      <ul id = 'FirstandPikeUL'></ul>
+      <ul id = 'SeatacAirportUL'></ul>
+      <ul id = 'SeattleCenterUL'></ul>
+      <ul id = 'CapitolHillUL'></ul>
+      <ul id = 'AlkiUL'></ul>
     </div>
 
     <script src="app.js"></script>
