--- a/sales.html
+++ b/sales.html
@@ -14,13 +14,16 @@
     <p>
       Below is a simulation of cookie sales per hour in each of our Salmon Cookie locations!
     </p>
-    <div>
+    <!-- <div>
       <ul id = 'FirstandPikeUL'></ul>
       <ul id = 'SeatacAirportUL'></ul>
       <ul id = 'SeattleCenterUL'></ul>
       <ul id = 'CapitolHillUL'></ul>
       <ul id = 'AlkiUL'></ul>
-    </div>
+    </div> -->
+    <table id="cookieStoreJS">
+
+    </table>
 
     <script src="app.js"></script>
   </body>
