stretch goals added

--- a/sales.html
+++ b/sales.html
@@ -9,21 +9,21 @@
       <h1>Sales Simulation</h1>
       <nav>
         <li><a href="index.html">Return Home</a></li>
+        <li><a href="sales.html">Run Again?</a></li>
       </nav>
     </header>
     <p>
       Below is a simulation of cookie sales per hour in each of our Salmon Cookie locations!
     </p>
-    <!-- <div>
+
+    <table id="cookieStoreJS"></table>
+    <div>
       <ul id = 'FirstandPikeUL'></ul>
       <ul id = 'SeatacAirportUL'></ul>
       <ul id = 'SeattleCenterUL'></ul>
       <ul id = 'CapitolHillUL'></ul>
       <ul id = 'AlkiUL'></ul>
-    </div> -->
-    <table id="cookieStoreJS">
-
-    </table>
+    </div>
 
     <script src="app.js"></script>
   </body>
