css styles and fixed

--- a/sales.html
+++ b/sales.html
@@ -12,7 +12,7 @@
         <li><a href="sales.html">Run Again?</a></li>
       </nav>
     </header><br/>
-    <p>
+    <p id="explain">
       Below is a simulation of cookie sales per hour in each of our Salmon Cookie locations!
     </p>
     <br/><hr/>
@@ -32,13 +32,13 @@
       <fieldset>
         <legend>Add New Location</legend>
         <label for="newLocation">Location Name:</label>
-        <input name="newLocation" type="text"/>
+        <input name="newLocation" type="text"/><br/>
         <label for="minimum">Minimum Customer/Hr: </label>
-        <input name="minimum" type="text"/>
+        <input name="minimum" type="text"/><br/>
         <label for="maximum">Maximum Customer/Hr: </label>
-        <input name="maximum" type="text"/>
+        <input name="maximum" type="text"/><br/>
         <label for="average">Average Cookie/Customer</label>
-        <input name="average" type="text"/>
+        <input name="average" type="text"/><br/>
         <button type="submit">Submit</button>
       </fieldset>
     </form>
