final cookie sales

--- a/sales.html
+++ b/sales.html
@@ -14,6 +14,7 @@
     </header><br/>
     <p id="explain">
       Below is a simulation of cookie sales per hour in each of our Salmon Cookie locations!
+      You can add new locations or edit old ones! Click on the 'Run Again?' button above to refresh!
     </p>
     <br/><hr/>
     <form id="addLocationForm">
@@ -27,16 +28,11 @@
         <input name="maximum" type="number"/><br/>
         <label for="average">Average Cookie/Customer</label>
         <input name="average" type="number" step="any"/><br/>
-        <button type="submit">      Submit        </button>
+        <button type="submit">Submit</button>
       </fieldset>
     </form>
     <table id="cookieStoreJS"></table>
-    <table id="staffingTable"></table>
-
-    <hr />
-
-
-
+    <table id="staffingTable"></table><hr />
     <script src="app.js"></script>
   </body>
 </html>
